less contrast in texts (resolves #24)

--- a/assets/sass/_config.sass
+++ b/assets/sass/_config.sass
@@ -16,7 +16,7 @@ $font-main: 'droid serif', helvetica
 $font-highlight: Amaranth, helvetica
 //$font-highlight: Merriweather, helvetica
 $font-size: 24px
-$font-color: #222
+$font-color: #333
 
 $page-width: 1000px
 
