--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -51,6 +51,7 @@
 
 body
     font-size: $font-size
+    color: $font-color
     line-height: 1.8em
     font-family: $font-main
     //padding: 1em 0 6em 0
